--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-3": "^6.24.1",
+    "nodemon": "^1.17.4",
     "webpack": "^4.8.2",
     "webpack-cli": "^2.1.3",
     "webpack-dev-server": "^3.1.4"
@@ -21,7 +22,8 @@
   "scripts": {
     "dev": "webpack-dev-server --mode development --progress --hot --open",
     "build": "webpack --mode production --progress",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "devserver": "./node_modules/nodemon/bin/nodemon.js app.js"
   },
   "repository": {
     "type": "git",
