--- a/server/package.json
+++ b/server/package.json
@@ -5,22 +5,26 @@
   "main": "app.js",
   "dependencies": {
     "consolidate": "^0.15.1",
+    "d3": "^5.4.0",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
+    "mapbox-gl": "^0.45.0",
+    "mapbox-gl-vue": "^1.8.2",
     "mysql": "^2.15.0",
-    "nodemon": "^1.17.4"
+    "nodemon": "^1.17.4",
+    "suncalc": "^1.8.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-3": "^6.24.1",
-    "webpack": "^4.8.2",
+    "webpack": "^4.8.3",
     "webpack-cli": "^2.1.3",
     "webpack-dev-server": "^3.1.4"
   },
   "scripts": {
-    "dev": "webpack-dev-server --mode development --progress --hot --open",
+    "dev": "webpack --watch --mode development --progress --hot",
     "build": "webpack --mode production --progress",
     "test": "echo \"Error: no test specified\" && exit 1",
     "devserver": "./node_modules/nodemon/bin/nodemon.js app.js"
