--- a/server/package.json
+++ b/server/package.json
@@ -12,13 +12,18 @@
     "mapbox-gl-vue": "^1.8.2",
     "mysql": "^2.15.0",
     "nodemon": "^1.17.4",
-    "suncalc": "^1.8.0"
+    "suncalc": "^1.8.0",
+    "vue": "^2.5.16",
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-3": "^6.24.1",
+    "css-loader": "^0.28.11",
+    "vue-loader": "^15.0.10",
+    "vue-template-compiler": "^2.5.16",
     "webpack": "^4.8.3",
     "webpack-cli": "^2.1.3",
     "webpack-dev-server": "^3.1.4"
