--- a/server/package.json
+++ b/server/package.json
@@ -29,10 +29,10 @@
     "webpack-dev-server": "^3.1.4"
   },
   "scripts": {
-    "dev": "webpack --watch --mode development --progress --hot",
+    "dev": "webpack --watch --mode development --progress",
     "build": "webpack --mode production --progress",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "devserver": "./node_modules/nodemon/bin/nodemon.js app.js"
+    "devserver": "nodemon -w . app.js"
   },
   "repository": {
     "type": "git",
