--- a/server/package.json
+++ b/server/package.json
@@ -5,9 +5,11 @@
   "main": "app.js",
   "dependencies": {
     "consolidate": "^0.15.1",
+    "cors": "^2.8.4",
     "d3": "^5.4.0",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
+    "geojson": "^0.5.0",
     "mapbox-gl": "^0.45.0",
     "mapbox-gl-vue": "^1.8.2",
     "mysql": "^2.15.0",
@@ -32,7 +34,7 @@
     "dev": "webpack --watch --mode development --progress",
     "build": "webpack --mode production --progress",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "devserver": "nodemon -w . app.js"
+    "devserver": "nodemon -w . --delay 2 app.js"
   },
   "repository": {
     "type": "git",
