--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "@deck.gl/core": "^5.2.5",
     "@turf/helpers": "^6.1.4",
     "@turf/tag": "^5.1.5",
+    "bootstrap-vue": "^2.0.0-rc.11",
     "consolidate": "^0.15.1",
     "cors": "^2.8.4",
     "d3": "^5.4.0",
@@ -20,6 +21,7 @@
     "suncalc": "^1.8.0",
     "vue": "^2.5.16",
     "vue-router": "^3.0.1",
+    "vue-slider-component": "^2.6.2",
     "wellknown": "^0.5.0"
   },
   "devDependencies": {
