--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "vue": "^2.5.16",
     "vue-router": "^3.0.1",
     "vue-slider-component": "^2.6.2",
+    "webworkify-webpack": "^2.1.2",
     "wellknown": "^0.5.0"
   },
   "devDependencies": {
