--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "consolidate": "^0.15.1",
     "cors": "^2.8.4",
     "d3": "^5.4.0",
+    "d3-interpolate": "^1.2.0",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "geojson": "^0.5.0",
