--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "nodemon": "^1.17.4",
     "suncalc": "^1.8.0",
     "vue": "^2.5.16",
+    "vue-awesome": "^3.0.0",
     "vue-router": "^3.0.1",
     "vue-slider-component": "^2.6.2",
     "webworkify-webpack": "^2.1.2",
